// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Textarea baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner narrow-scrollbar"
      modelvalue=""
      name="description"
      placeholder="请输入描述文案"
    />
    <!---->
    <!---->
  </div>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner narrow-scrollbar"
      modelvalue=""
      name="description"
      placeholder="请输入文案，高度可自适应；autosize=true"
    />
    <!---->
    <!---->
  </div>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner narrow-scrollbar"
      modelvalue=""
      name="description"
      placeholder="请输入文案，高度可自适应，最小3行，最大5行；autosize={minRows: 3, maxRows: 5}"
    />
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Textarea Textarea eventsVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner narrow-scrollbar"
      modelvalue=""
      placeholder="请输入"
    />
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Textarea Textarea maxlengthVue demo works fine 1`] = `
<div>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner t-resize-none narrow-scrollbar"
      maxlength="20"
      modelvalue=""
      placeholder="请输入描述文案，文本长度最多20，maxlength=20"
    />
    <!---->
    <span
      class="t-textarea__limit"
    >
      0/20
    </span>
  </div>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner narrow-scrollbar"
      modelvalue=""
      placeholder="请输入描述文案，最多20字符（一个汉字占两个字符长度），maxcharacter=20"
    />
    <span
      class="t-textarea__limit"
    >
      0/20
    </span>
    <!---->
  </div>
</div>
`;

exports[`Textarea Textarea typeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner t-is-disabled narrow-scrollbar"
      disabled=""
      placeholder=""
    />
    <!---->
    <!---->
  </div>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner narrow-scrollbar"
      placeholder=""
      readonly=""
    />
    <!---->
    <!---->
  </div>
</div>
`;
